static/css/stylesheet.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: #817a5e;
  }

  .nav-wrapper {
    background-color: #b79d8c;
  }

  main {
    flex: 1 0 auto;
  }
     
  #footertext {
    padding-bottom: 15px;
  }

  .btn-large {
    background-color: #817a5e;
    color: #fff;
  }

  .brand-logo {
    margin: 8px 0px 2px 20px;
  }

  .cardcontent {
    font-size: 0.75em;
    font-weight: 500;
    color: white;
  }

  div.collapsecontainer {
    border-radius: 10px;
  }

  div.collapsible,
  div.collapsible-body,
  div.collapsible-header {
    border: 0;
    box-shadow: none;
  }

  div.collapsible-body {
    background-color: #b79d8c;
    border-radius: 5px;
  }

  .welcomemessage {
    color: #fff;
    font-size: 1.25em;

  }

  #welcomepanel {
    margin-top: 20px;
  }

  #loginpanel {
    border-radius: 10px;
  }

  div.card,
  div.card-panel {
    border-radius: 20px;
  }

  .account {
    font-weight: 700;
  }

